# MultipleSignalSlotsInjection

./: CMakeLists.txt  README.md
source/: main.cpp
source/Exe/: Application.cpp  Application.h
source/Global/: Logger.cpp  Logger.h  global.h
source/LibA/: Foo.cpp  Foo.h  FooSignalInterface.h  FooSignalProxy.cpp  FooSignalProxy.h
source/LibB/: Bar.cpp  Bar.h  BarSignalInterface.h  BarSignalProxy.cpp  BarSignalProxy.h
