CMAKE_MINIMUM_REQUIRED(VERSION 3.16)

IF(NOT DEFINED ENV{Qt6_DIR})
    MESSAGE(FATAL, "Qt6_DIR not found")
ELSE()
    SET(CMAKE_PREFIX_PATH $ENV{Qt6_DIR})
ENDIF()

SET(PROJECT_BIN_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
SET(PROJECT_SRC_PATH ${CMAKE_CURRENT_SOURCE_DIR}/source)

PROJECT(MultipleSignalSlotsInjection)

# Set C++ Standard
SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

FIND_PACKAGE(Qt6 REQUIRED COMPONENTS Core)

QT_STANDARD_PROJECT_SETUP()

QT_ADD_LIBRARY(
    Global INTERFACE
    source/Global/global.h
)

QT_ADD_LIBRARY(
    LibA SHARED
    source/LibA/Foo.h
    source/LibA/Foo.cpp
    source/LibA/FooSignalInterface.h
    source/LibA/FooSignalProxy.h
    source/LibA/FooSignalProxy.cpp
)

QT_ADD_LIBRARY(
    LibB SHARED
    source/LibB/Bar.h
    source/LibB/Bar.cpp
    source/LibB/BarSignalInterface.h
    source/LibB/BarSignalProxy.h
    source/LibB/BarSignalProxy.cpp
)

QT_ADD_EXECUTABLE(
    Programm
    source/Exe/Application.h
    source/Exe/Application.cpp
    source/Exe/main.cpp
)

TARGET_INCLUDE_DIRECTORIES(LibA     PUBLIC ${PROJECT_SRC_PATH})
TARGET_INCLUDE_DIRECTORIES(LibB     PUBLIC ${PROJECT_SRC_PATH})
TARGET_INCLUDE_DIRECTORIES(Programm PUBLIC ${PROJECT_SRC_PATH})

TARGET_LINK_LIBRARIES(LibA     PRIVATE           Qt6::Core)
TARGET_LINK_LIBRARIES(LibB     PRIVATE LibA      Qt6::Core)
TARGET_LINK_LIBRARIES(Programm PRIVATE LibA LibB Qt6::Core)

IF(MSVC)
    SET_TARGET_PROPERTIES(LibA     PROPERTIES PDB_OUTPUT_DIRECTORY ${PROJECT_BIN_PATH})
    SET_TARGET_PROPERTIES(LibB     PROPERTIES PDB_OUTPUT_DIRECTORY ${PROJECT_BIN_PATH})
    SET_TARGET_PROPERTIES(Programm PROPERTIES PDB_OUTPUT_DIRECTORY ${PROJECT_BIN_PATH})
    
    SET_TARGET_PROPERTIES(LibA     PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BIN_PATH})
    SET_TARGET_PROPERTIES(LibB     PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BIN_PATH})
    SET_TARGET_PROPERTIES(Programm PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BIN_PATH})
ENDIF(MSVC)

ADD_CUSTOM_COMMAND(
    TARGET Programm
    POST_BUILD
    COMMAND CD $<$<CONFIG:Debug>:${PROJECT_BIN_PATH}/Debug>$<$<CONFIG:Release>:${PROJECT_BIN_PATH}/Release> && ${WINDEPLOYQT_EXECUTABLE} Programm.exe --verbose 1 --dir . --plugindir plugins --no-translations --compiler-runtime
    )

QT_FINALIZE_PROJECT()